src/test/deca/context/invalid/homemade/call_notmethod_decompile.res
class A extends Object {
	int x;
}
{
	A a = new A();
	a.x();
}
